--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,19 @@
 ---
 import Layout from '../layouts/Layout.astro';
-const pageTitle = "Milky-Way";
+const pageTitle = "Small Space";
 ---
 <Layout pageTitle={pageTitle}>
     <div class="gif">
-        <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
+        <img width="300" height="259" alt="RaccoonSpaceGif" src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNXE5OWI5dzU1cWhxZWl2YmhsbHFjZ3Y3ZDgzNzN2Z3o3eXdvY2t3MiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/5xRW2cUKfcyQg/giphy.gif"/>
     </div>
-    <h1>Milky-Way</h1>
-    <span class="badge">Digital Craftsman (Developer)</span>
+    <h1>✨ Josh Groulx ✨</h1>
+    <span class="badge">Engineering Student (Electrical Engineering)</span>
     <h2>About</h2>
     <p>
-        Praesent malesuada mi nisi, quis tempus magna venenatis ut.
-        Suspendisse tempor sem at scelerisque congue. Curabitur mollis,
-        mi id molestie finibus, metus sem sagittis nunc, euismod feugiat orci neque non lorem.
-        Aenean sollicitudin erat eu molestie tempus. Nunc ac eros elementum, fermentum lacus at,
-        pellentesque mauris. Suspendisse eros neque, interdum euismod consectetur convallis,
-        porttitor at massa. Phasellus a ultrices arcu. Donec viverra, lorem in pellentesque euismod,
-        libero justo gravida nibh, non ultricies justo purus ultrices est.
+I am an aspiring engineer working towards a specialized degree in computer hardware engineering in hopes my efforts will lead me towards a promising career in computer electronics development and advancments in the graphical and computation industry.
     </p>
     <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
+I am currently enrolled with the University of New Brunswick where I am in the first year second term of my electrical engineering degree. I finished my first term with a final grade of "A" in all courses and continue to approach my studies with the dedication and commiment I intend to bring to my future workspace to ensure consistent professionalism and assurance of quality.
     </p>
     <div class="center">
         <a href="/works/">
@@ -31,22 +22,15 @@ const pageTitle = "Milky-Way";
     </div>
     <h2>Skills</h2>
     <div class="skills center">
-        <img class="skills__img" width="46" height="46" alt="C#" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="DotNetCore" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Angular" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="CSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="HTML" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
+        <img class="skills__img" width="46" height="46" alt="Python" src="https://www.svgrepo.com/show/452091/python.svg"/>
+        <img class="skills__img" width="46" height="46" alt="VSCode" src="https://www.svgrepo.com/show/374171/vscode.svg"/>
+        <img class="skills__img" width="46" height="46" alt="Blender" src="https://www.svgrepo.com/show/353488/blender.svg"/>
+        <img class="skills__img" width="46" height="46" alt="Autodesk" src="https://www.svgrepo.com/show/452163/autodesk.svg"/>
+        <img class="skills__img" width="46" height="46" alt="NodeJS" src="https://www.svgrepo.com/show/354119/nodejs-icon.svg"/>
     </div>
     <h2>Interests</h2>
     <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
+Outside of my academic life I enjoy camping and family trips where I take up opportunities to volunteer for the community in sustainability and maintainence efforts. I also enjoy time spent playing and practicing guitar where I continue to write music and perform pracitced pieces.
     </p>
 </Layout>
 
