Changed Project Page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 const pageTitle = "Small Space";
 ---
 <Layout pageTitle={pageTitle}>
-    <div class="gif">
+    <div class="homegif">
         <img width="300" height="259" alt="RaccoonSpaceGif" src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNXE5OWI5dzU1cWhxZWl2YmhsbHFjZ3Y3ZDgzNzN2Z3o3eXdvY2t3MiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/5xRW2cUKfcyQg/giphy.gif"/>
     </div>
     <h1>✨ Josh Groulx ✨</h1>
