--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -3,7 +3,7 @@ import { getCollection } from "astro:content";
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 const allProjects = await getCollection("projects");
-const pageTitle = "Projects";
+const pageTitle = "Works";
 ---
 <Layout pageTitle={pageTitle}>
     <div class="gif">
